# cpp-cli-app-template

./: CMakeLists.txt  README.md
CPP-CLI-APP-TEMPLATE/: CPP-CLI-APP-TEMPLATE.cpp  main.cpp
scripts/: init_template.sh
tests/: tests.cpp
